# Haskell-Electron-app

./: .gitignore  LICENSE  README.md
backend/: backend.cabal  stack.yaml
haskell-app/: index.html  main.js  package.json  renderer.js
