name:                backend
version:             0.0.1
synopsis:            Electron webserver backend
description:         Please see README.md
homepage:            https://github.com/codetalkio/Haskell-Electron-app#readme
license:             OtherLicense
license-file:        ../LICENSE
author:              codetalk
maintainer:          contact@codetalk.io
copyright:           codetalk
category:            Development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , servant-server
                     , wai
                     , warp
  default-language:    Haskell2010

executable backend-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , backend
  default-language:    Haskell2010

test-suite backend-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , backend
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/codetalkio/Haskell-Electron-app
